# crypto-gost-modules

./: CMakeLists.txt  README.md
crypto/kuznyechik/: kuznyechik.cpp  test
crypto/magma/: test
include/: kuznyechik.h
kuznyechik/: main.cpp  test
magma/: magma.cpp  magma.h  main.cpp
src/: client.cpp  server.cpp
tests/: vpn_capture.pcap
